Add content skeleton, add navigation kind of, update compile script to reflect latest edition of node async policies

--- a/html/faq.html
+++ b/html/faq.html
@@ -76,7 +76,7 @@
 .top-lvl-nav li a {
   text-decoration: none;
   color: #070005;
-  display: block;
+  display: inline-block;
   transition: .3s background-color;
 }
 
