--- a/html/index.html
+++ b/html/index.html
@@ -76,7 +76,7 @@
 .top-lvl-nav li a {
   text-decoration: none;
   color: #070005;
-  display: block;
+  display: inline-block;
   transition: .3s background-color;
 }
 
@@ -129,8 +129,6 @@ a {
 <p>Pretty Princess Club, LLC is planning an event:</p>
 <h4>Royal Vegas Retreat</h4>
 <h5>November 20 - 22 2020</h5>
-<h4>Founders' Weekend</h4>
-<h5>November 15 - 17 2019</h5>
 <p>Stay tuned for more details, including:</p>
 <ul>
 <li>Fundraising initiatives</li>
