--- a/html/vegas.html
+++ b/html/vegas.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><title>Pretty Princess Club, LLC</title><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"><meta http-equiv="x-ua-compatible" content="ie=edge"><link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"><style>/*!
+<!DOCTYPE html><html><head><title>PPC Presents: Royal Vegas Retreat</title><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"><meta http-equiv="x-ua-compatible" content="ie=edge"><link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"><style>/*!
  * Bootstrap v4.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2018 The Bootstrap Authors
  * Copyright 2011-2018 Twitter, Inc.
@@ -76,7 +76,7 @@
 .top-lvl-nav li a {
   text-decoration: none;
   color: #070005;
-  display: block;
+  display: inline-block;
   transition: .3s background-color;
 }
 
@@ -125,7 +125,7 @@ h3, h4 {
 a {
   color: #0000ad;
   text-decoration: underline;
-}</style><nav class="navbar top-lvl-nav"><span class="brand">Pretty Princess Club</span><button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"><span class="hambutton"><i class="fas fa-bars fa-1x"></i></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent1"><ul><li><a href="./index.html">PPC Home</a></li><li><a href="./vegas.html">RVR 2020</a></li><li><a href="./faq.html">FAQ</a></li><li><a href="./contact.html">Contact Us</a></li></ul></div></nav></head><body><h1>Royal Vegas Retreat</h1>
+}</style><nav class="navbar top-lvl-nav"><span class="brand">Pretty Princess Club</span><button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"><span class="hambutton"><i class="fas fa-bars fa-1x"></i></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent1"><ul><li><a href="./index.html">PPC Home</a></li><li><a href="./vegas.html">RVR 2020</a></li><li><a href="./faq.html">FAQ</a></li><li><a href="./contact.html">Contact Us</a></li></ul></div></nav><nav class="navbar event-nav"><div class="collapse navbar-collapse" id="navbarSupportedContent1"><ul><li><a href="./vegas.html">The Event</a></li><li><a href="./event/reg.html">Hotel and Registration</a></li><li><a href="./event/schedule.html">Schedule</a></li><li><a href="./event/programming.html">Programming</a></li><li><a href="./event/special-guests.html">Special Guests</a></li><li><a href="./event/tourists.html">Tourist Information</a></li><li><a href="./event/event-faq.html">Event FAQ</a></li></ul></div></nav></head><body><h1>Royal Vegas Retreat</h1>
 <h1>MGM Grand</h1>
 <h1>Las Vegas, NV</h1>
 <h1>November 20 - November 22, 2020</h1>
@@ -133,7 +133,7 @@ a {
 <p>It's an event for you and every fashionista who loves EGL. It's a weekend of shopping, learning, and partying with your Best Fashion Friends. It's a time to unwind, relax, and engage in your favorite hobby. It's a place where you can discuss EGL fashion with serious, like-minded individuals.</p>
 <p>For information about the organization putting on the event, the type of fashion we admire, and more, please visit <a href="./faq.html">our FAQ</a>.</p>
 <h2>Where do I sign up?</h2>
-<p>Sign up now on <a href="https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2020-tickets-52897344381%22">Eventbrite! (https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2020-tickets-52897344381)</a> Sales start on December 14, 2018. If you can't snag a ticket now, don't worry! We are doing a special ticket drive for early adopters. More ticket types will go on sale starting early 2019, at which point we'll have a pricing schedule as well. In the meantime, follow us on <a href="https://www.facebook.com/events/277370609594805/">Facebook!</a></p>
+<p>We will open signups on Eventbrite as soon as tickets go on sale.  Stay tuned!</p>
 <h2>I have a question!</h2>
 <p>Please see our <a href="./contact.html">Contact Us page</a> for information on how to get in touch with us. We're happy to answer any questions!</p>
 <script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script><script type="text/javascript" src="../js/popper.min.js"></script><script type="text/javascript" src="../js/bootstrap.min.js"></script><script type="text/javascript" src="../js/mdb.min.js"></script><p>Copyright 2019 Pretty Princess Club, LLC</p></body></html>
