--- a/html/index.html
+++ b/html/index.html
@@ -1,4 +1,10 @@
-<!DOCTYPE html><html><head><title>Pretty Princess Club, LLC</title><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"><meta http-equiv="x-ua-compatible" content="ie=edge"><link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"><style>/*!
+<!DOCTYPE html><html><head><title>Pretty Princess Club, LLC</title><meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"><meta http-equiv="x-ua-compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
+<!-- add links to custom fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Gabriela" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <style>/*!
  * Bootstrap v4.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2018 The Bootstrap Authors
  * Copyright 2011-2018 Twitter, Inc.
@@ -41,9 +47,9 @@
  * animate.css -http://daneden.me/animate
  * Version - 3.7.0
  * Licensed under the MIT license - http://opensource.org/licenses/MIT
- * 
+ *
  * Monique test
- * 
+ *
  * Copyright (c) 2018 Daniel Eden
  */.animated{-webkit-animation-duration:1s;animation-duration:1s;-webkit-animation-fill-mode:both;animation-fill-mode:both}.animated.infinite{-webkit-animation-iteration-count:infinite;animation-iteration-count:infinite}.animated.delay-1s{-webkit-animation-delay:1s;animation-delay:1s}.animated.delay-2s{-webkit-animation-delay:2s;animation-delay:2s}.animated.delay-3s{-webkit-animation-delay:3s;animation-delay:3s}.animated.delay-4s{-webkit-animation-delay:4s;animation-delay:4s}.animated.delay-5s{-webkit-animation-delay:5s;animation-delay:5s}.animated.fast{-webkit-animation-duration:.8s;animation-duration:.8s}.animated.faster{-webkit-animation-duration:.5s;animation-duration:.5s}.animated.slow{-webkit-animation-duration:2s;animation-duration:2s}.animated.slower{-webkit-animation-duration:3s;animation-duration:3s}@media (prefers-reduced-motion){.animated{-webkit-animation:unset!important;animation:unset!important;-webkit-transition:none!important;-o-transition:none!important;transition:none!important}}@-webkit-keyframes fadeIn{from{opacity:0}to{opacity:1}}@keyframes fadeIn{from{opacity:0}to{opacity:1}}.fadeIn{-webkit-animation-name:fadeIn;animation-name:fadeIn}@-webkit-keyframes fadeInDown{from{opacity:0;-webkit-transform:translate3d(0,-100%,0);transform:translate3d(0,-100%,0)}to{opacity:1;-webkit-transform:translate3d(0,0,0);transform:translate3d(0,0,0)}}@keyframes fadeInDown{from{opacity:0;-webkit-transform:translate3d(0,-100%,0);transform:translate3d(0,-100%,0)}to{opacity:1;-webkit-transform:translate3d(0,0,0);transform:translate3d(0,0,0)}}.fadeInDown{-webkit-animation-name:fadeInDown;animation-name:fadeInDown}@-webkit-keyframes fadeInLeft{from{opacity:0;-webkit-transform:translate3d(-100%,0,0);transform:translate3d(-100%,0,0)}to{opacity:1;-webkit-transform:translate3d(0,0,0);transform:translate3d(0,0,0)}}@keyframes fadeInLeft{from{opacity:0;-webkit-transform:translate3d(-100%,0,0);transform:translate3d(-100%,0,0)}to{opacity:1;-webkit-transform:translate3d(0,0,0);transform:translate3d(0,0,0)}}.fadeInLeft{-webkit-animation-name:fadeInLeft;animation-name:fadeInLeft}@-webkit-keyframes fadeInRight{from{opacity:0;-webkit-transform:translate3d(100%,0,0);transform:translate3d(100%,0,0)}to{opacity:1;-webkit-transform:translate3d(0,0,0);transform:translate3d(0,0,0)}}@keyframes fadeInRight{from{opacity:0;-webkit-transform:translate3d(100%,0,0);transform:translate3d(100%,0,0)}to{opacity:1;-webkit-transform:translate3d(0,0,0);transform:translate3d(0,0,0)}}.fadeInRight{-webkit-animation-name:fadeInRight;animation-name:fadeInRight}@-webkit-keyframes fadeInUp{from{opacity:0;-webkit-transform:translate3d(0,100%,0);transform:translate3d(0,100%,0)}to{opacity:1;-webkit-transform:translate3d(0,0,0);transform:translate3d(0,0,0)}}@keyframes fadeInUp{from{opacity:0;-webkit-transform:translate3d(0,100%,0);transform:translate3d(0,100%,0)}to{opacity:1;-webkit-transform:translate3d(0,0,0);transform:translate3d(0,0,0)}}.fadeInUp{-webkit-animation-name:fadeInUp;animation-name:fadeInUp}@-webkit-keyframes fadeOut{from{opacity:1}to{opacity:0}}@keyframes fadeOut{from{opacity:1}to{opacity:0}}.fadeOut{-webkit-animation-name:fadeOut;animation-name:fadeOut}@-webkit-keyframes fadeOutDown{from{opacity:1}to{opacity:0;-webkit-transform:translate3d(0,100%,0);transform:translate3d(0,100%,0)}}@keyframes fadeOutDown{from{opacity:1}to{opacity:0;-webkit-transform:translate3d(0,100%,0);transform:translate3d(0,100%,0)}}.fadeOutDown{-webkit-animation-name:fadeOutDown;animation-name:fadeOutDown}@-webkit-keyframes fadeOutLeft{from{opacity:1}to{opacity:0;-webkit-transform:translate3d(-100%,0,0);transform:translate3d(-100%,0,0)}}@keyframes fadeOutLeft{from{opacity:1}to{opacity:0;-webkit-transform:translate3d(-100%,0,0);transform:translate3d(-100%,0,0)}}.fadeOutLeft{-webkit-animation-name:fadeOutLeft;animation-name:fadeOutLeft}@-webkit-keyframes fadeOutRight{from{opacity:1}to{opacity:0;-webkit-transform:translate3d(100%,0,0);transform:translate3d(100%,0,0)}}@keyframes fadeOutRight{from{opacity:1}to{opacity:0;-webkit-transform:translate3d(100%,0,0);transform:translate3d(100%,0,0)}}.fadeOutRight{-webkit-animation-name:fadeOutRight;animation-name:fadeOutRight}@-webkit-keyframes fadeOutUp{from{opacity:1}to{opacity:0;-webkit-transform:translate3d(0,-100%,0);transform:translate3d(0,-100%,0)}}@keyframes fadeOutUp{from{opacity:1}to{opacity:0;-webkit-transform:translate3d(0,-100%,0);transform:translate3d(0,-100%,0)}}.fadeOutUp{-webkit-animation-name:fadeOutUp;animation-name:fadeOutUp}/*!
  * animate.css -http://daneden.me/animate
@@ -56,89 +62,459 @@
   padding: 0;
 }
 
-.top-lvl-nav {
-  background-color: #d1ebff;
-  box-shadow: none;
+/*** Added css for responsve nav **/
+
+.main_h {
+  position: fixed;
+  top: 0px;
+  max-height: 70px;
+  z-index: 999;
+  width: 100%;
+  padding-top: 17px;
+  background: none;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  opacity: 0;
+  top: -100px;
+  padding-bottom: 6px;
+  font-family: "Montserrat", sans-serif;
+}
+@media only screen and (max-width: 766px) {
+  .main_h {
+    padding-top: 25px;
+    overflow: scroll;
+  }
 }
 
-.top-lvl-nav ul {
+.open-nav {
+  max-height: 400px !important;
+}
+.open-nav .mobile-toggle {
+  transform: rotate(-90deg);
+  -webkit-transform: rotate(-90deg);
+}
+
+.sticky {
+  background-color: rgba(255, 255, 255, 0.93);
+  opacity: 1;
+  top: 0px;
+  border-bottom: 1px solid gainsboro;
+}
+
+.logo {
+  width: 50px;
+  font-size: 25px;
+  color: #f6a5c2;
+  font-family: 'Gabriela', serif;
+  text-transform: uppercase;
+  float: left;
+  display: block;
+  margin-top: 0;
+  line-height: 1;
+  margin-bottom: 10px;
+}
+@media only screen and (max-width: 766px) {
+  .logo {
+    float: none;
+  }
+}
+
+nav {
+  float: right;
+  width: 85%;
+}
+@media only screen and (max-width: 766px) {
+  nav {
+    width: 100%;
+  }
+}
+nav ul {
   list-style: none;
-  text-align: center;
-  padding: 0;
-  margin: 0;
+  overflow: hidden;
+  text-align: right;
+  float: right;
 }
-
-.top-lvl-nav li {
-  font-family: Georgia, serif;
-  width: 25%;
-  height: 50px;
-  line-height: 50px;
-  font-size: 1.4em;
-  margin-right: -4px;
+@media only screen and (max-width: 766px) {
+  nav ul {
+    padding-top: 10px;
+    margin-bottom: 22px;
+    float: left;
+    text-align: center;
+    width: 100%;
+  }
 }
-
-.top-lvl-nav li a {
-  text-decoration: none;
-  color: #070005;
+nav ul li {
   display: inline-block;
-  transition: .3s background-color;
+  margin-left: 35px;
+  line-height: 1.5;
+}
+@media only screen and (max-width: 766px) {
+  nav ul li {
+    width: 100%;
+    padding: 7px 0;
+    margin: 0;
+  }
+}
+nav ul a, span {
+  color: #888888;
+  text-transform: uppercase;
+  font-size: 13px;
+  font-family: 'Gabriela', serif;
+}
+nav ul a:hover {
+  color:#f6a5c2;
 }
 
-.top-lvl-nav li a:hover {
-  background-color: #eeffff
+nav button {
+  background: transparent;
+  font-family: 'Gabriela', serif;
+  color: #888888;
+  font-size: 13px;
+}
+#sub1
+{
+    position: absolute;
+    background-color: #f9f9f9;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    text-align: left;
+    padding: 5px 15px;
+    z-index: 1;
+}
+nav ul#sub1 li {
+  margin:0;
+  display: block;
+}
+nav ul#sub1 li a {
+  text-align: left;
+  line-height: 3;
 }
 
-.top-lvl-nav li a.active {
-  background-color: #ffeaf8;
-  color: #151719;
-  cursor: default;
+.mobile-toggle {
+  display: none;
+  cursor: pointer;
+  font-size: 20px;
+  position: absolute;
+  right: 22px;
+  top: 0;
+  width: 30px;
+  -webkit-transition: all 200ms ease-in;
+  -moz-transition: all 200ms ease-in;
+  transition: all 200ms ease-in;
+}
+@media only screen and (max-width: 766px) {
+  .mobile-toggle {
+    display: block;
+  }
+  p.copyright {
+    width: 100%;
+  }
 }
 
-.navbar-toggle {
-  border: none;
-  background-color: inherit;
+.mobile-toggle span {
+  width: 30px;
+  height: 4px;
+  margin-bottom: 6px;
+  border-radius: 1000px;
+  background: #8f8f8f;
+  display: block;
 }
 
-.brand {
-  font-size: 3rem;
-  color: #070005;
+.row {
+  width: 100%;
+  max-width: 940px;
+  margin: 0 auto;
+  position: relative;
+  padding: 0 2%;
+}
+.nav-row {
+  display:block;
 }
 
-.fa-1x {
-  font-size: 1.5rem;
+
+* {
+  box-sizing: border-box;
 }
 
 body {
-  background-color: #d1ebff;
-  color: #070005;
-  font-family: Georgia, serif;
-}
-
-h1 {
-
-}
-
-h2 {
-
-}
-
-h3, h4 {
-
+  color: #8f8f8f;
+  background: white;
+  font-weight: 300;
+  -webkit-font-smoothing: antialiased;
+  position: relative;
+ margin: 0;
+ padding-bottom: 6rem;
+ min-height: 100%;
 }
 
 a {
-  color: #0000ad;
-  text-decoration: underline;
-}</style><nav class="navbar top-lvl-nav"><span class="brand">Pretty Princess Club</span><button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"><span class="hambutton"><i class="fas fa-bars fa-1x"></i></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent1"><ul><li><a href="./index.html">PPC Home</a></li><li><a href="./vegas.html">RVR 2020</a></li><li><a href="./faq.html">FAQ</a></li><li><a href="./contact.html">Contact Us</a></li></ul></div></nav></head><body><p>Coming soon!</p>
-<p>Pretty Princess Club, LLC is planning an event:</p>
-<h4>Royal Vegas Retreat</h4>
-<h5>November 20 - 22 2020</h5>
-<p>Stay tuned for more details, including:</p>
-<ul>
-<li>Fundraising initiatives</li>
-<li>Hotel room block opening</li>
+  text-decoration: none;
+}
+
+h1,h2,h3,h4,h5{
+  display: block;
+  width: 100%;
+  font-family: 'Gabriela', serif;
+}
+h6 {
+  line-height: 2;
+  font-family: 'Open Sans', sans-serif;
+}
+h1 {
+  font-size: 30px;
+  line-height: 1.8;
+  text-transform: uppercase;
+}
+
+p {
+  margin-bottom: 20px;
+  font-size: 17px;
+  line-height: 2;
+  font-family: 'Open Sans', sans-serif;
+  width: 100%;
+}
+
+.content {
+  padding: 50px 2% 150px;
+}
+
+.hero {
+  position: relative;
+  background: url(https://media.discordapp.net/attachments/538825259818680322/540753712969416713/princessclb.png) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  /*background-color:#DDEFFC;*/
+  text-align: center;
+  color: #fff;
+  padding-top: 110px;
+  min-height: 500px;
+  letter-spacing: 2px;
+  font-family: "Montserrat", sans-serif;
+}
+.hero h1 {
+  font-size: 50px;
+  line-height: 1.3;
+  color: #f7d7e6;
+  line-height: 1.3;
+  text-shadow: -1px -1px 0 #f6a5c2, 1px -1px 0 #f6a5c2, -1px 1px 0 #f6a5c2, 1px 1px 0 #f6a5c2;
+  text-transform: none;
+}
+.hero h1 span {
+  font-size: 25px;
+  color: #e8f380;
+  border-bottom: 2px solid #e8f380;
+  padding-bottom: 12px;
+  line-height: 3;
+}
+
+
+
+@-webkit-keyframes scroll {
+  0% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+
+  100% {
+    opacity: 0;
+    -webkit-transform: translateY(20px);
+    transform: translateY(20px);
+  }
+}
+@keyframes scroll {
+  0% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+  }
+
+  100% {
+    opacity: 0;
+    -webkit-transform: translateY(20px);
+    -ms-transform: translateY(20px);
+    transform: translateY(20px);
+  }
+}
+
+.footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: #e9f5fd;
+  text-align: center;
+}
+
+.footer ul {
+    padding:0;
+    list-style: none;
+}
+.copyright
+{
+  float: left;
+  width: 50%;
+  font-size: 14px;
+  text-align: left;
+}
+.social-block {
+  text-align: left;
+  font-size: 14px;
+  margin:0;
+
+}
+.footer-social-icons {
+    width: 250px;
+    display:block;
+    float:right;
+}
+.social-icon {
+    color: #fff;
+}
+ul.social-icons {
+  margin: 0 0 0 -12px;
+  text-align: left;
+}
+.social-icons li {
+    vertical-align: top;
+    display: inline;
+    height: 100px;
+}
+.social-icons a {
+    color: #93cfef;
+    text-decoration: none;
+}
+.fa-facebook {
+    padding:10px 14px;
+    -o-transition:.5s;
+    -ms-transition:.5s;
+    -moz-transition:.5s;
+    -webkit-transition:.5s;
+    transition: .5s;
+    background-color: ##e9f5fd;
+}
+.fa-facebook:hover {
+    background-color: #3d5b99;
+    color:#fff;
+}
+.fa-twitter {
+    padding:10px 12px;
+    -o-transition:.5s;
+    -ms-transition:.5s;
+    -moz-transition:.5s;
+    -webkit-transition:.5s;
+    transition: .5s;
+    background-color: ##e9f5fd;
+}
+.fa-twitter:hover {
+    background-color: #00aced;
+    color:#fff
+}
+.fa-instagram {
+    padding:10px 14px;
+    -o-transition:.5s;
+    -ms-transition:.5s;
+    -moz-transition:.5s;
+    -webkit-transition:.5s;
+    transition: .5s;
+    background-color: ##e9f5fd;
+}
+.fa-instagram:hover {
+    background-color: #D92C7B;
+    color:#fff
+}
+/** css for dropdown menu **/
+li ul{
+    display:none;
+}
+
+li:hover ul, li:active ul{
+    display:block;
+}
+
+</style>
+<!-- <nav class="navbar top-lvl-nav">
+  <span class="brand">Pretty Princess Club</span>
+  <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="hambutton"><i class="fas fa-bars fa-1x"></i></span></button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent1">
+      <ul>
+        <li><a href="./index.html">PPC Home</a></li>
+        <li><a href="./vegas.html">RVR 2020</a></li>
+        <li><a href="./faq.html">FAQ</a></li>
+        <li><a href="./contact.html">Contact Us</a></li>
+      </ul>
+    </div>
+  </nav> -->
+
+  <header class="main_h">
+
+      <div class="row nav-row">
+          <a class="logo" href="#">PPC</a>
+
+          <div class="mobile-toggle">
+              <span></span>
+              <span></span>
+              <span></span>
+          </div>
+    <nav class="topnav" id="myTopnav">
+      <ul>
+      <li> <a href="./index.html" class="active">PPC Home</a></li>
+      <li> <a href="./vegas.html">Royal Vegas Retreat</a></li></li>
+      <li>   <a href="./faq.html">FAQ</a></li>
+      <li>   <a href="./contact.html">Contact Us</a></li>
+
+    </ul>
+    </nav>
+
+        </div> <!-- / row -->
+
+    </header>
+
+
+
+
+
+
+</head>
+  <body>
+    <div class="hero">
+
+    <h1><span>Some text can go here?</span><br>Like pretty princess club</h1>
+
+
+</div>
+
+<div class="row content">
+
+  <h1 class="sec02">Coming soon!</h1>
+  <p>Pretty Princess Club, LLC is planning an event:</p>
+  <h4>Royal Vegas Retreat</h4>
+  <h5>November 20 - 22 2020</h5>
+  <p>Stay tuned for more details, including:</p>
+    <ul>
+        <li>Fundraising initiatives</li>
+        <li>Hotel room block opening</li>
 <li>Ticket sales</li>
-<li>Vendor and sponsor offers</li>
-</ul>
-<p>Check it out: <a href="./vegas.html">Royal Vegas Retreat 2020</a></p>
-<script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script><script type="text/javascript" src="../js/popper.min.js"></script><script type="text/javascript" src="../js/bootstrap.min.js"></script><script type="text/javascript" src="../js/mdb.min.js"></script><p>Copyright 2019 Pretty Princess Club, LLC</p></body></html>
+        <li>Vendor and sponsor offers</li>
+    </ul>
+    <p>Check it out: <a href="./vegas.html">Royal Vegas Retreat 2020</a></p>
+</div>
+<script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script><script type="text/javascript" src="../js/popper.min.js"></script><script type="text/javascript" src="../js/bootstrap.min.js"></script><script type="text/javascript" src="../js/mdb.min.js"></script>
+
+<div class="footer">
+  <p class="copyright">© 2019 Pretty Princess Club, LLC</p>
+  <div class="footer-social-icons">
+      <h6 class="social-block">Follow us on</h6>
+      <ul class="social-icons">
+          <li><a href="" class="social-icon"> <i class="fab fa-facebook"></i></a></li>
+          <li><a href="" class="social-icon"> <i class="fab fa-twitter"></i></a></li>
+          <li><a href="https://www.instagram.com/prettyprincess.club/" class="social-icon"> <i class="fab fa-instagram"></i></a></li>
+
+      </ul>
+   </div>
+ </div>
+
+</body></html>
