updates for sub menu, pages
starting off building, styling the drop down menu on the contact page before copying to other page.

--- a/html/faq.html
+++ b/html/faq.html
@@ -1,4 +1,9 @@
-<!DOCTYPE html><html><head><title>Pretty Princess Club, LLC</title><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"><meta http-equiv="x-ua-compatible" content="ie=edge"><link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"><style>/*!
+<!DOCTYPE html><html><head><title>Pretty Princess Club, LLC</title><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"><meta http-equiv="x-ua-compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
+  <!-- add links to custom fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Gabriela" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <style>/*!
  * Bootstrap v4.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2018 The Bootstrap Authors
  * Copyright 2011-2018 Twitter, Inc.
