--- a/html/contact.html
+++ b/html/contact.html
@@ -86,7 +86,7 @@
 
 
 .open-nav {
-  max-height: 400px !important;
+  max-height: 550px !important;
 }
 .open-nav .mobile-toggle {
   transform: rotate(-90deg);
@@ -176,7 +176,7 @@ h2:after
 
 
 .content_list
-	{background:#fff;min-width:180px;top:45px; border:1px solid #f5f5f5;}
+	{background:#fff;min-width:145px;top:45px; border:1px solid #f5f5f5;}
 
 
 .content_list.left:before
@@ -227,6 +227,12 @@ nav ul#sub1 li a {
 p.sub-menu {
   margin:15px;
 }
+
+p.sub-menu a {
+  padding:0 0 5px;
+  display: inline-block;
+}
+
 .mobile-toggle {
   display: none;
   cursor: pointer;
@@ -377,6 +383,15 @@ p {
     -ms-transform: translateY(20px);
     transform: translateY(20px);
   }
+}
+.section-header {
+    line-height: 1.8;
+    color: #f6a5c2;
+    display: block;
+    margin-block-start: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    text-align: center;
 }
 
 .footer {
@@ -571,12 +586,15 @@ hr {
             box-shadow:none;
             text-align: center;
             border: none;
-            background: #f8f8f8;
+            background: #fcefef;
             box-shadow: none;
           }
 
     p.sub-menu {
         margin: 15px 0px;
+    }
+    p.sub-menu a {
+      padding:0 0 15px;
     }
 }
 /*******/
@@ -618,8 +636,13 @@ hr {
 			</button>
 			<div class="content_list left" id="thisList_1">
 				<p class="sub-menu">
-         <a href="./vegas.html">Overview</a></br>
-        <a href="./event/event-faq.html">faq</a>
+         <a href="./vegas.html">RVR Home</a></br>
+        <a href="./event/event-faq.html">Event FAQ</a></br>
+        <a href="./event/programming.html">Programming</a></br>
+        <a href="./event/reg.html">Registration</a></br>
+        <a href="./event/schedule.html">Schedule</a></br>
+        <a href="./event/special-guests.html">Special Guests</a></br>
+        <a href="./event/tourists.html">Tourists</a>
       </p>
 			</div>
 </li>
