--- a/html/event/event-faq.html
+++ b/html/event/event-faq.html
@@ -690,10 +690,10 @@ hr {
   <hr>
 
 </div>
-<script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script>
-<script type="text/javascript" src="../js/popper.min.js"></script>
-<script type="text/javascript" src="../js/bootstrap.min.js"></script>
-<script type="text/javascript" src="../js/mdb.min.js"></script>
+<script type="text/javascript" src="../../js/jquery-3.3.1.min.js"></script>
+<script type="text/javascript" src="../../js/popper.min.js"></script>
+<script type="text/javascript" src="../../js/bootstrap.min.js"></script>
+<script type="text/javascript" src="../../js/mdb.min.js"></script>
 
 <div class="footer">
   <p class="copyright">© 2019 Pretty Princess Club, LLC</p>
