Update footer with actual links

--- a/html/contact.html
+++ b/html/contact.html
@@ -692,8 +692,8 @@ hr {
   <div class="footer-social-icons">
       <h6 class="social-block">Follow us on</h6>
       <ul class="social-icons">
-          <li><a href="" class="social-icon"> <i class="fab fa-facebook"></i></a></li>
-          <li><a href="" class="social-icon"> <i class="fab fa-twitter"></i></a></li>
+          <li><a href="https://www.facebook.com/ppcllcrvr/" class="social-icon"> <i class="fab fa-facebook"></i></a></li>
+          <li><a href="https://twitter.com/ppcllcrvr" class="social-icon"> <i class="fab fa-twitter"></i></a></li>
           <li><a href="https://www.instagram.com/prettyprincess.club/" class="social-icon"> <i class="fab fa-instagram"></i></a></li>
 
       </ul>
