Content updates from MD

--- a/html/contact.html
+++ b/html/contact.html
@@ -675,12 +675,13 @@ hr {
 
 <div class="row content">
 
-  <h1 class="sec02">Contact Us</h1>
-  <hr>
+<h1>Contact Us</h1>
 <h2>Via email</h2>
 <p>Contact us directly at <a href="mailto:niftyniftynif@gmail.com">niftyniftynif@gmail.com</a></p>
 <h2>Via social media</h2>
-<p>Coming soon!</p>
+<p>Find us on <a href="https://www.instagram.com/prettyprincess.club/">Instagram</a> at <a href="https://www.instagram.com/prettyprincess.club/">@prettyprincess.club</a>.</p>
+<p>Find us on <a href="https://www.facebook.com/ppcllcrvr/">Facebook</a> at <a href="https://www.facebook.com/ppcllcrvr/">/ppcllcrvr</a>.</p>
+<p>Find us on <a href="https://twitter.com/ppcllcrvr">Twitter</a> at <a href="https://twitter.com/ppcllcrvr">@ppcllcrvr</a>.</p>
 </div>
 <script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script><script type="text/javascript" src="../js/popper.min.js"></script>
 <script type="text/javascript" src="../js/bootstrap.min.js"></script>
