--- a/html/event/event-faq.html
+++ b/html/event/event-faq.html
@@ -683,10 +683,7 @@ hr {
   <h1 class="sec01">
   <h1>Frequently Asked Questions</h1>
   <hr>
-  <h2 class="section-header">A sub section?</h2>
-  <h3>Question?</h3>
-  <p>Answer</p>
-
+  <p>Coming soon!  See our <a href="../faq.html">main FAQ</a> for now.</p>
   <hr>
 
 </div>
