--- a/html/event/reg.html
+++ b/html/event/reg.html
@@ -683,10 +683,7 @@ hr {
   <h1 class="sec01">
   <h1>RVR Registration</h1>
   <hr>
-  <h2 class="section-header">A sub section?</h2>
-  <h3>Heading</h3>
-  <p>content</p>
-
+  <p>Registration will officially open in November 2019.  Stay tuned!</p>
   <hr>
 
 </div>
