--- a/html/event/special-guests.html
+++ b/html/event/special-guests.html
@@ -683,10 +683,7 @@ hr {
   <h1 class="sec01">
   <h1>RVR Special Guests</h1>
   <hr>
-  <h2 class="section-header">A sub section?</h2>
-  <h3>Heading</h3>
-  <p>content</p>
-
+  <p>We will be working with <a href="https://fakestarusa.com/">Fake Star USA</a> to secure the best special guests in EGL fashion!  Stay tuned as we release details about guests closer to the event.</p>
   <hr>
 
 </div>
