--- a/html/event/tourists.html
+++ b/html/event/tourists.html
@@ -683,10 +683,9 @@ hr {
   <h1 class="sec01">
   <h1>RVR Tourists</h1>
   <hr>
-  <h2 class="section-header">A sub section?</h2>
-  <h3>Heading</h3>
-  <p>content</p>
-
+  <p>Las Vegas, NV USA is a tourist wonderland!  While you enjoy Royal Vegas Retreat, the Vegas Strip awaits for all of your needs.</p>
+  <p>Visit the <a href="https://mgmgrand.mgmresorts.com/en.html">MGM Grand</a> site to learn more about the amenities available at the venue.</p>
+  <p>Stay tuned for our official tourist recommendations!</p>
   <hr>
 
 </div>
