--- a/html/index.html
+++ b/html/index.html
@@ -679,18 +679,14 @@ hr {
 
 <div class="row content">
 
-  <h1 class="sec02">Coming soon!</h1>
-  <p>Pretty Princess Club, LLC is planning an event:</p>
-  <h4>Royal Vegas Retreat</h4>
-  <h5>November 20 - 22 2020</h5>
-  <p>Stay tuned for more details, including:</p>
-    <ul>
-        <li>Fundraising initiatives</li>
-        <li>Hotel room block opening</li>
-<li>Ticket sales</li>
-        <li>Vendor and sponsor offers</li>
-    </ul>
-    <p>Check it out: <a href="./vegas.html">Royal Vegas Retreat 2020</a></p>
+<h3><a id="Welcome_to_the_club_0"></a>Welcome to the club.</h3>
+<p>Pretty Princess Club, LLC is putting on EGL fashion events.  We’re committed to providing a world-class experience for fashion fans looking for the next big thing.</p>
+<p>We’re planning a fantastic event: a three-day convention in sunny, scintillating Las Vegas.  We want to put on the J-fashion party you’ve been waiting for, where you can mingle, shop, learn, and play with other EGL die-hards.  Check it out!</p>
+<h4><a id="Royal_Vegas_Retreat_6"></a>Royal Vegas Retreat</h4>
+<h5><a id="November_20__22_2020_8"></a>November 20 - 22 2020</h5>
+<h5><a id="MGM_Grand_Las_Vegas_NV_USA_10"></a>MGM Grand, Las Vegas, NV USA</h5>
+<p>Check it out: <a href="./vegas.html">Royal Vegas Retreat 2020</a></p>
+
 </div>
 <script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script><script type="text/javascript" src="../js/popper.min.js"></script><script type="text/javascript" src="../js/bootstrap.min.js"></script><script type="text/javascript" src="../js/mdb.min.js"></script>
 
