--- a/html/vegas.html
+++ b/html/vegas.html
@@ -685,16 +685,13 @@ hr {
 <h3>MGM Grand Las Vegas, NV</h3>
 <h3>November 20 - November 22, 2020</h3>
 </div>
-
-<hr>
-<h2>What is it?</h2>
-<p>It's an event for you and every fashionista who loves EGL. It's a weekend of shopping, learning, and partying with your Best Fashion Friends. It's a time to unwind, relax, and engage in your favorite hobby. It's a place where you can discuss EGL fashion with serious, like-minded individuals.</p>
+<h2><a id="What_is_it_13"></a>What is it?</h2>
+<p>It’s an event for you and every fashionista who loves EGL. It’s a weekend of shopping, learning, and partying with your Best Fashion Friends. It’s a time to unwind, relax, and engage in your favorite hobby. It’s a place where you can discuss EGL fashion with serious, like-minded individuals.</p>
 <p>For information about the organization putting on the event, the type of fashion we admire, and more, please visit <a href="./faq.html">our FAQ</a>.</p>
-<h2>Where do I sign up?</h2>
+<h2><a id="Where_do_I_sign_up_20"></a>Where do I sign up?</h2>
 <p>We will open signups on Eventbrite as soon as tickets go on sale.  Stay tuned!</p>
-<h2>I have a question!</h2>
-<p>Please see our <a href="./contact.html">Contact Us page</a> for information on how to get in touch with us. We're happy to answer any questions!</p>
-
+<h2><a id="I_have_a_question_25"></a>I have a question!</h2>
+<p>Please see our <a href="./contact.html">Contact Us page</a> for information on how to get in touch with us. We’re happy to answer any questions!</p>
 </div>
 <script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script>
 <script type="text/javascript" src="../js/popper.min.js"></script>
