--- a/html/event/programming.html
+++ b/html/event/programming.html
@@ -683,9 +683,8 @@ hr {
   <h1 class="sec01">
   <h1>RVR Programming</h1>
   <hr>
-  <h2 class="section-header">A sub section?</h2>
-  <h3>Heading</h3>
-  <p>content</p>
+  <p>We will release more information about official event programming in 2020.  Stay tuned!</p>
+  <p>Are you interested in being a panelist or volunteering at the event?  Please <a href="../contact.html">contact us.</a></p>
 
   <hr>
 
