--- a/html/event/schedule.html
+++ b/html/event/schedule.html
@@ -683,9 +683,8 @@ hr {
   <h1 class="sec01">
   <h1>RVR Schedule</h1>
   <hr>
-  <h2 class="section-header">A sub section?</h2>
-  <h3>Heading</h3>
-  <p>content</p>
+  <p>We will release the official schedule in October 2020.  Stay tuned!</p>
+  <p>If you’re interested in volunteering or becoming a panelist, please <a href="../contact.html">contact us.</a></p>
 
   <hr>
 
