--- a/html/faq.html
+++ b/html/faq.html
@@ -671,81 +671,54 @@ hr {
 </div>
 
 <div class="row content">
-
-<h1 class="sec01">
-<h1>Frequently Asked Questions</h1>
-<hr>
-<h2 class="section-header">Pretty Princess Club, LLC</h2>
-<h3>What's with the name?</h3>
-<p>It's definitely a bit of internet snark that appealed to Nifty Nif, PPC, LLC HBIC. Nif also loves modern TLDs, and princess.club was a lot more expensive. Coincidentally, Pretty Princess Club was available for registration in Nifty Nif's home state.</p>
-<h3>Who is PPC?</h3>
+<h1><a id="Frequently_Asked_Questions_0"></a>Frequently Asked Questions</h1>
+<h2><a id="Pretty_Princess_Club_LLC_3"></a>Pretty Princess Club, LLC</h2>
+<h3><a id="Whats_with_the_name_6"></a>What’s with the name?</h3>
+<p>It’s definitely a bit of internet snark that appealed to Nifty Nif, PPC, LLC HBIC. Nif also loves modern TLDs, and princess.club was a lot more expensive. Coincidentally, Pretty Princess Club was available for registration in Nifty Nif’s home state.</p>
+<h3><a id="Who_is_PPC_10"></a>Who is PPC?</h3>
 <p>PPC is an LLC registered in Washington State, USA. It consists of one member, Nifty Nif.</p>
-<h3>What else do you do?</h3>
+<h3><a id="What_else_do_you_do_14"></a>What else do you do?</h3>
 <p>Nifty is a software engineer by day. She also likes to play pinball, cook and bake, watch cartoons, and make costumes.</p>
-<h3>What else does PPC do?</h3>
+<h3><a id="What_else_does_PPC_do_18"></a>What else does PPC do?</h3>
 <p>That remains to be seen! We incorporated in order to put on the <a href="./vegas.html">Royal Vegas Retreat</a>. Perhaps someday, pending the success of RVR, PPC will expand and help other Lolitas put on events.</p>
-
-<hr>
-<h2 class="section-header">EGL Fashion</h2>
-<h3>What is EGL?</h3>
-<p>EGL is short for &quot;Elegant Gothic Lolita.&quot; &quot;Lolita Fashion&quot; is another name for it. It's a style of dress that originated in Japan and is associated with Harajuku fashion culture.</p>
-<h3>I need an example.</h3>
+<h2><a id="EGL_Fashion_22"></a>EGL Fashion</h2>
+<h3><a id="What_is_EGL_25"></a>What is EGL?</h3>
+<p>EGL is short for “Elegant Gothic Lolita.” “Lolita Fashion” is another name for it. It’s a style of dress that originated in Japan and is associated with Harajuku fashion culture.</p>
+<h3><a id="I_need_an_example_29"></a>I need an example.</h3>
 <ul>
 <li><a href="http://www.angelicpretty.com/">Angelic Pretty</a></li>
 <li><a href="http://www.babyssb.co.jp/">Baby the Stars Shine Bright, Alice and the Pirates</a></li>
 <li><a href="http://metamorphose.gr.jp">Metamorphose</a></li>
-<li><a href="https://moi-meme-moitie.com/">Moi-Même-Moitié</a> These are just a couple of examples! The world of Lolita is vast...</li>
+<li><a href="https://moi-meme-moitie.com/">Moi-Même-Moitié</a> These are just a couple of examples! The world of Lolita is vast…</li>
 </ul>
-<h3>I am an expert in EGL. You got something wrong!</h3>
+<h3><a id="I_am_an_expert_in_EGL_You_got_something_wrong_36"></a>I am an expert in EGL. You got something wrong!</h3>
 <p>Thanks, friend! Reach out to us and give us a hand: <a href="./contact.html">Contact Us</a>.</p>
-
-<hr>
-<h2 class="section-header">Royal Vegas Retreat 2020</h2>
-<h3>The Event</h3>
-<h4>When is it?</h4>
+<h2><a id="Royal_Vegas_Retreat_2020_40"></a>Royal Vegas Retreat 2020</h2>
+<h3><a id="The_Event_43"></a>The Event</h3>
+<h4><a id="When_is_it_45"></a>When is it?</h4>
 <p>Royal Vegas Retreat will take place November 20 - 22, 2020.</p>
-<h4>Where is it?</h4>
+<h4><a id="Where_is_it_49"></a>Where is it?</h4>
 <p>Royal Vegas Retreat will take place at the MGM Grand Resort and Casino in Las Vegas, Nevada, United States of America.</p>
-<h3>The Venue</h3>
-<p>We will be at the <a href="https://www.mgmgrand.com">MGM Grand Hotel and Casino, Las Vegas</a>. We'll publish information about the room block soon!</p>
-<h3>Registration</h3>
-<p>Register now on <a href="https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2020-tickets-52897344381">Eventbrite</a>! Ticket sales start December 14, 2018. If you can't get a ticket right away, don't worry! We'll be introducing new ticket tiers in early 2019.</p>
-<h3>Schedule and Programming</h3>
+<h3><a id="The_Venue_53"></a>The Venue</h3>
+<p>We will be at the <a href="https://www.mgmgrand.com">MGM Grand Hotel and Casino, Las Vegas</a>. We’ll publish information about the room block soon!</p>
+<h3><a id="Registration_57"></a>Registration</h3>
+<p>Registration opens November 2019.  We will release more information about registration dates, the hotel room block, and ticket prices between now and November.</p>
+<h3><a id="Schedule_and_Programming_61"></a>Schedule and Programming</h3>
 <p>Coming soon!</p>
-<h3>Designers, Vendors, and Special Guests</h3>
+<h3><a id="Designers_Vendors_and_Special_Guests_65"></a>Designers, Vendors, and Special Guests</h3>
 <p>Are you interested in showcasing your business or talents at Royal Vegas Retreat? <a href="./contact.html">Contact Us!</a></p>
-<h3>Volunteering and Sponsorship</h3>
+<h3><a id="Volunteering_and_Sponsorship_69"></a>Volunteering and Sponsorship</h3>
 <p>Are you interested in lending your skills to the success of Royal Vegas Retreat? <a href="./contact.html">Contact Us!</a></p>
-
-<hr>
-<h2 class="section-header">Founders' Weekend 2019</h2>
-<h3>What is Founders' Weekend?</h3>
-<p>Founders' Weekend 2019 is a chance for Nifty and up to 50 of her most trusted advisers to walk the con venue, discuss logistics, and make big decisions about the content and style of the con.</p>
-<h3>When is it?</h3>
-<p>Founders' Weekend will be November 15 - 17, 2019. It's at the same venue as RVR: MGM Grand, Las Vegas.</p>
-<h3>How do I get an invite?</h3>
-<p>There are a few ways:</p>
-<ul>
-<li>Buy a Founders' ticket during Kickstarter sales.</li>
-<li>Offer to volunteer as con staff and buy any ticket to RVR.</li>
-<li>Offer to volunteer as a panelist and buy any ticket to RVR.</li>
-</ul>
-<h3>Why do I have to buy a ticket to RVR in order to go to Founders' Weekend?</h3>
-<p>At Founders' Weekend, we hope to come to some consensus on the aesthetic, content, and experience of RVR. If you're not going to RVR, why do you care?</p>
-<h3>How much does it cost?</h3>
-<p>The cost of your hotel room, some food and beverages, and some entertainment will be covered by your Kickstarter donation or volunteer commitment. You will be personally liable for:</p>
-<ul>
-<li>Airfare and transportation (except on group outings)</li>
-<li>Entertainment and food on your own or separate from the group</li>
-<li>Your own gambling expenses</li>
-</ul>
-
-<hr>
-<h2 class="section-header">Policies and Regulations</h2>
-<h3>Code of Conduct</h3>
+<h2><a id="Policies_and_Regulations_75"></a>Policies and Regulations</h2>
+<h3><a id="Dress_Code_Policy_78"></a>Dress Code Policy</h3>
+<p>We at PPC are committed to putting on a dedicated EGL fashion event.</p>
+<p>Attendees must wear J-fashion to participate at the event.  This includes but is not limited to: Lolita/EGL, Ouji, Aristocrat/EGA, Mori-kei, Fairy-kei, Decora, Visual-kei, Otome, Gyaru, J-Punk, J-Goth.  Japanese as well as Western formalwear (e.g. a three-piece suit) are also allowed.</p>
+<p>Cosplay, steampunk, and European historical re-enactment costumes do not fit the theme of this event, and as such are not allowed.</p>
+<p>If you have any questions about the dress code, please feel free to <a href="./contact.html">contact us</a> with any questions.  Our staff at the event are happy to assist as well, and they will have the final say when considering whether a guest’s attire is appropriate for the event.</p>
+<h3><a id="Code_of_Conduct_88"></a>Code of Conduct</h3>
 <p>Coming soon!</p>
-<h2>Want to know more?</h2>
-<h3>Reach out!</h3>
+<h2><a id="Want_to_know_more_92"></a>Want to know more?</h2>
+<h3><a id="Reach_out_95"></a>Reach out!</h3>
 <p><a href="./contact.html">Contact Us page</a></p>
 </div>
 <script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script>
