Update global nav paths
update url paths for sub pages on sub pages.

--- a/html/event/tourists.html
+++ b/html/event/tourists.html
@@ -627,7 +627,7 @@ hr {
           </div>
           <nav class="topnav" id="myTopnav">
             <ul>
-            <li> <a href="./index.html">PPC Home</a></li>
+            <li> <a href="../index.html">PPC Home</a></li>
 
             <li>
               <button class="btnList" onclick="openList('1')">
@@ -636,19 +636,19 @@ hr {
             </button>
             <div class="content_list left" id="thisList_1">
               <p class="sub-menu">
-               <a href="./vegas.html">RVR Home</a></br>
-              <a href="./event/event-faq.html" >Event FAQ</a></br>
-              <a href="./event/programming.html" >Programming</a></br>
-              <a href="./event/reg.html" >Registration</a></br>
-              <a href="./event/schedule.html" >Schedule</a></br>
-              <a href="./event/special-guests.html" c>Special Guests</a></br>
-              <a href="./event/tourists.html" lass="active">Tourists</a>
+               <a href="../vegas.html">RVR Home</a></br>
+              <a href="./event-faq.html" >Event FAQ</a></br>
+              <a href="./programming.html" >Programming</a></br>
+              <a href="./reg.html" >Registration</a></br>
+              <a href="./schedule.html" >Schedule</a></br>
+              <a href="./special-guests.html" c>Special Guests</a></br>
+              <a href="./tourists.html" lass="active">Tourists</a>
             </p>
             </div>
         </li>
 
-            <li>   <a href="./faq.html">FAQ</a></li>
-            <li>   <a href="./contact.html" >Contact Us</a></li>
+            <li>   <a href="../faq.html">FAQ</a></li>
+            <li>   <a href="../contact.html" >Contact Us</a></li>
 
           </ul>
           </nav>
