--- a/html/index.html
+++ b/html/index.html
@@ -1,4 +1,11 @@
-<!DOCTYPE html><html><head><title>Pretty Princess Club, LLC</title><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"><meta http-equiv="x-ua-compatible" content="ie=edge">
+<!DOCTYPE html><html><head><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#6ec6ff">
+<meta name="msapplication-TileColor" content="#bde5ff">
+<meta name="theme-color" content="#ffffff">
+  <title>Pretty Princess Club, LLC</title><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"><meta http-equiv="x-ua-compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
   <!-- add links to custom fonts -->
     <link href="https://fonts.googleapis.com/css?family=Gabriela" rel="stylesheet">
