--- a/html/about.html
+++ b/html/about.html
@@ -1,4 +1,11 @@
-<!DOCTYPE html><html><head><title>PPC Presents: Royal Vegas Retreat</title><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"><meta http-equiv="x-ua-compatible" content="ie=edge">
+<!DOCTYPE html><html><head><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#6ec6ff">
+<meta name="msapplication-TileColor" content="#bde5ff">
+<meta name="theme-color" content="#ffffff">
+  <title>Pretty Princess Club, LLC</title><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"><meta http-equiv="x-ua-compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
   <!-- add links to custom fonts -->
     <link href="https://fonts.googleapis.com/css?family=Gabriela" rel="stylesheet">
@@ -155,32 +162,32 @@ nav button {
 }
 
 .container_list
-	{display:block;position:relative;float:left}
+  {display:block;position:relative;float:left}
 
 .content_list
-	{display:none;position:absolute;z-index:10; }
+  {display:none;position:absolute;z-index:10; }
 
 button.btnList{
-	margin:0;
-	border:none;
-	outline:none;
-	cursor:pointer
-	}
+  margin:0;
+  border:none;
+  outline:none;
+  cursor:pointer
+  }
   .acc
-	{display:none}
+  {display:none}
 
 .content_list:before,
 h2:before,
 h2:after
-	{content:"";display:block;position:absolute}
+  {content:"";display:block;position:absolute}
 
 
 .content_list
-	{background:#fff;min-width:145px;top:45px; border:1px solid #f5f5f5;}
+  {background:#fff;min-width:145px;top:45px; border:1px solid #f5f5f5;}
 
 
 .content_list.left:before
-	{left:0;
+  {left:0;
       width: 8px;
       top: -8px;
       border-left: 8px solid transparent;
@@ -189,22 +196,22 @@ h2:after
   }
 
 .content_list.center
-	{left:-65px}
+  {left:-65px}
 
 .content_list.center:before
-	{left:50%;transform:translate(-50%,0)}
+  {left:50%;transform:translate(-50%,0)}
 
 .content_list.right,
 .content_list.right:before
-	{right:0}
+  {right:0}
 
 .content_list:before{
-	width:8px;
-	top:-8px;
-	border-left:8px solid transparent;
-	border-right:8px solid transparent;
-	border-bottom:8px solid #fff
-	}
+  width:8px;
+  top:-8px;
+  border-left:8px solid transparent;
+  border-right:8px solid transparent;
+  border-bottom:8px solid #fff
+  }
 
 #sub1
 {
@@ -249,9 +256,9 @@ p.sub-menu a {
 
 
 @keyframes buble{
-	from{transform:rotate(45deg) translate(-50%,0) scale(.8,.8)}
-	to{transform:rotate(45deg) translate(-50%,0) scale(1,1)}
-	}
+  from{transform:rotate(45deg) translate(-50%,0) scale(.8,.8)}
+  to{transform:rotate(45deg) translate(-50%,0) scale(1,1)}
+  }
 
   /*
   When the "Button List" clicked, the "content_list" will be replaced with the "show_list".
@@ -260,7 +267,7 @@ p.sub-menu a {
 
 
 [class*="show"]
-  	{display:block}
+    {display:block}
 
 .show_list{
   text-align: left;
@@ -268,14 +275,14 @@ p.sub-menu a {
 }
 
 @keyframes height{
-  	from{padding:0;opacity:0}
-  	to{padding:20px 0;opacity:1}
-  	}
+    from{padding:0;opacity:0}
+    to{padding:20px 0;opacity:1}
+    }
 
 @keyframes width{
-  	from{width:0;opacity:0}
-  	to{width:150px;opacity:1}
-  	}
+    from{width:0;opacity:0}
+    to{width:150px;opacity:1}
+    }
 
 
 * {
@@ -326,31 +333,30 @@ p {
 
 .hero {
   position: relative;
-  background: url(../temp-rvr-banner.png) no-repeat center center fixed;
+  background: url(./ppc-clock-hero.png) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
   /*background-color:#DDEFFC;*/
   text-align: center;
   color: #fff;
-  /*padding-top: 110px;*/
-  min-height: 300px;
-  letter-spacing: 2px;
   font-family: "Montserrat", sans-serif;
+  letter-spacing: 2px;
+  min-height: 500px;
+  padding-top: 230px;
 }
 .hero h1 {
   font-size: 50px;
   line-height: 1.3;
-  color: #fff;
+  color: #f7d7e6;
   line-height: 1.3;
-  padding: 80px 0 0 ;
-/*  text-shadow: -1px -1px 0 #f6a5c2, 1px -1px 0 #f6a5c2, -1px 1px 0 #f6a5c2, 1px 1px 0 #f6a5c2;*/
+  text-shadow: -1px -1px 0 #f6a5c2, 1px -1px 0 #f6a5c2, -1px 1px 0 #f6a5c2, 1px 1px 0 #f6a5c2;
   text-transform: none;
 }
 .hero h1 span {
   font-size: 25px;
-  color: #cfb678;
-  border-bottom: 2px solid #cfb678;
+  color: #e8f380;
+  border-bottom: 2px solid #e8f380;
   padding-bottom: 12px;
   line-height: 3;
 }
@@ -387,7 +393,7 @@ p {
 }
 .section-header {
     line-height: 1.8;
-    color: #0F385E;
+    color: #f6a5c2;
     display: block;
     margin-block-start: 0.67em;
     margin-inline-start: 0px;
@@ -492,7 +498,7 @@ li:hover ul, li:active ul{
 }
 
 hr {
-  border: 1px solid #CFB678;
+  border: 1px solid #D0EAF8;
   width: 100%;
         margin: auto;
         margin-bottom:5%;
@@ -548,41 +554,41 @@ hr {
       }
 
       .btnList
-      		{width:100%;}
+          {width:100%;}
 
-      	.drop
-      		{display:none}
+        .drop
+          {display:none}
 
-      	.acc
-      		{display:inline-block}
+        .acc
+          {display:inline-block}
 
         .content_list {
-      		width:100%;
-      		top:0;
-      		position:relative;
-      		float:left
-      		}
+          width:100%;
+          top:0;
+          position:relative;
+          float:left
+          }
 
 
-      	.content_list.left,
-      	.content_list.center,
-      	.content_list.right
-      		{left:0;right:0}
+        .content_list.left,
+        .content_list.center,
+        .content_list.right
+          {left:0;right:0}
 
-      	.content_list.left:before,
-      	.content_list.center:before,
-      	.content_list.right:before
-      		{left:50%;transform:translate(-50%,0)}
+        .content_list.left:before,
+        .content_list.center:before,
+        .content_list.right:before
+          {left:50%;transform:translate(-50%,0)}
 
-      	/* In small screen, when the "Button Nav" clicked, the "container_menu" will be replaced with the "show_menu" */
+        /* In small screen, when the "Button Nav" clicked, the "container_menu" will be replaced with the "show_menu" */
 
-      	.show_menu{
-      		background:#1a1a1a;
-      		width:100%;
-      		top:45px;
-      		display:block;
-      		position:absolute
-      		}
+        .show_menu{
+          background:#1a1a1a;
+          width:100%;
+          top:45px;
+          display:block;
+          position:absolute
+          }
           .show_list {
             box-shadow:none;
             text-align: center;
@@ -617,8 +623,8 @@ hr {
   <header class="main_h">
 
       <div class="row nav-row">
-        <a class="logo-link" href="../index.html">
-<img src="../PrincessClockLogo-04.svg" class="logo logo-img" alt="PPC">
+          <a class="logo-link" href="#">
+<img src="./PrincessClockLogo-04.svg" class="logo logo-img" alt="PPC">
 </a>
           <div class="mobile-toggle">
               <span></span>
@@ -627,7 +633,7 @@ hr {
           </div>
           <nav class="topnav" id="myTopnav">
             <ul>
-            <li> <a href="../index.html">PPC Home</a></li>
+            <li> <a href="./index.html" class="active">PPC Home</a></li>
 
             <li>
               <button class="btnList" onclick="openList('1')">
@@ -636,21 +642,21 @@ hr {
             </button>
             <div class="content_list left" id="thisList_1">
               <p class="sub-menu">
-               <a href="../vegas.html">RVR Home</a></br>
-              <a href="./event-faq.html" >Event FAQ</a></br>
-              <a href="./programming.html" class="active">Programming and Schedule</a></br>
-              <a href="./reg.html">Registration</a></br>
-              <a href="./venue.html">Room Block and Venue</a></br>
-              <a href="./special-guests.html">Special Guests</a></br>
-              <a href="./tourists.html">Tourists</a></br>
-              <a href="./vendors.html">Vendors</a></br>
-              <a href="./volunteers.html">Volunteers</a>
+               <a href="./vegas.html" >RVR Home</a></br>
+              <a href="./event/event-faq.html">Event FAQ</a></br>
+              <a href="./event/programming.html">Programming and Schedule</a></br>
+              <a href="./event/reg.html">Registration</a></br>
+              <a href="./event/venue.html">Room Block and Venue</a></br>
+              <a href="./event/special-guests.html">Special Guests</a></br>
+              <a href="./event/tourists.html">Tourists</a></br>
+              <a href="./event/vendors.html">Vendors</a></br>
+              <a href="./event/volunteers.html">Volunteers</a>
             </p>
             </div>
         </li>
-            <li>   <a href="../about.html">About PPC</a></li>
-            <li>   <a href="../faq.html">FAQ</a></li>
-            <li>   <a href="../contact.html" >Contact Us</a></li>
+            <li>   <a href="./about.html">About PPC</a></li>
+            <li>   <a href="./faq.html">FAQ</a></li>
+            <li>   <a href="./contact.html" >Contact Us</a></li>
             <li>   <a href="https://prettyprincessclub.substack.com/" >Blog</a></li>
 
           </ul>
@@ -661,87 +667,31 @@ hr {
     </header>
 
 
-<!--- <nav class="navbar event-nav"><div class="collapse navbar-collapse" id="navbarSupportedContent1">
-  <ul>
-    <li><a href="./vegas.html">The Event</a></li>
-    <li><a href="./event/reg.html">Hotel and Registration</a></li>
-    <li><a href="./event/schedule.html">Schedule</a></li>
-    <li><a href="./event/programming.html">Programming</a></li>
-    <li><a href="./event/special-guests.html">Special Guests</a></li>
-    <li><a href="./event/tourists.html">Tourist Information</a></li>
-    <li><a href="./event/event-faq.html">Event FAQ</a></li>
-  </ul></div></nav> -->
+
+
+
+
 </head>
-<body>
+  <body>
+    <div class="hero">
 
-  <div class="hero">
-
-  <h1><span>Royal Vegas Retreat</span><br>Programming</h1>
+    <h1><span>Welcome to</span><br>pretty princess club</h1>
 
 
 </div>
 
 <div class="row content">
 
-  <h1 class="sec01">
-  <h1>RVR Programming</h1>
-  <hr>
-  <p>We're planning an incredible event stacked with fashion shows, a tea party, a swap meet, EGL trivia, games, panels, and shopping.</p>
-  <p>We will release more information about official event programming in 2020, including special guest panels and VIP events.  Stay tuned!</p>
-  <p>Check out our tentative schedule below - subject to change prior to event.</p>
-  <h2 class="section-header">Day 1</h2>
-  <h3 class="section-header">Friday, November 20 2020</h3>
-  <h4 class="section-header">Daytime</h4>
-  <ul>
-    <li>Shopping</li>
-    <li>Scavenger hunt</li>
-    <li>Fashion Shows</li>
-    <li>Panels</li>
-  </ul>
-  <h4 class="section-header">Evening</h4>
-  <ul>
-    <li>Coord Contests</li>
-    <li>Trivia</li>
-    <li>Special Guest and VIP Events</li>
-  </ul>
-  <h2 class="section-header">Day 2</h2> 
-  <h3 class="section-header">Saturday, November 21 2020</h3>
-  <h4 class="section-header">Daytime</h4>
-  <ul>
-    <li>Shopping</li>
-    <li>Swap Meet</li>
-    <li>Fashion Shows</li>
-    <li>Panels</li>
-  </ul>
-  <h4 class="section-header">Evening</h4>
-  <ul>
-    <li>Coord Contests</li>
-    <li>Special Guest and VIP Events</li>
-    <li>Dance</li>
-  </ul>
-  <h2 class="section-header">Day 3</h2>
-  <h3 class="section-header">Sunday, November 22 2020</h3>
-  <h4 class="section-header">Daytime</h4>
-  <ul>
-    <li>Shopping</li>
-    <li>Tea Party (included with all GA tickets)</li>
-    <li>Panels</li>
-  </ul>
-  <hr>
-
-  <h1 class="sec01">
-  <h1>RVR Schedule</h1>
-  <hr>
-  <p>We will release the official schedule in October 2020.  Stay tuned!</p>
-  
-  <hr>
+<h1 class="section-header">About us</h1>
+<p>Pretty Princess Club is a group of Lolita fashion fans from around the world.</p>
+<p>We wanted to see more dedicated Lolita fashion events in the United States, so we decided to put one on ourselves.</p>
+<p><a href="https://www.facebook.com/nif.ward">Nifty Nif</a> is the HBIC of this operation.  She wears sweet, classic, and sweet-classic and regularly struggles to describe her eclectic wardrobe.  She loves traveling for Lolita fashion events and learning more about the international J-fashion scene.</p>
+<p><a href="https://kjrstenkay.com">Kjrsten Kay</a> a.k.a. Snail is the mastermind behind our beautiful logos and design elements.</p>
+<p><a href="http://moniquelopez.net">Monique</a> a.k.a. Neeks is the genius who built our gorgeous website.</p>
+<p>Equally wonderful and beautiful are the rest of our team: Aiu, Jess, Kim, Lily, and a special shout-out to Nif's husband Ryan - our semi-official photographer.</p>
 
 </div>
-
-<script type="text/javascript" src="../../js/jquery-3.3.1.min.js"></script>
-<script type="text/javascript" src="../../js/popper.min.js"></script>
-<script type="text/javascript" src="../../js/bootstrap.min.js"></script>
-<script type="text/javascript" src="../../js/mdb.min.js"></script>
+<script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script><script type="text/javascript" src="../js/popper.min.js"></script><script type="text/javascript" src="../js/bootstrap.min.js"></script><script type="text/javascript" src="../js/mdb.min.js"></script>
 
 <div class="footer">
   <p class="copyright">© 2019 Pretty Princess Club, LLC</p>
