Add padding hack for phones to vegas landing page

--- a/vegas.html
+++ b/vegas.html
@@ -10,6 +10,13 @@
     <link rel="stylesheet" href="./css/animate.css">
     <link rel="stylesheet" href="./css/responsive-nav.css">
     <link rel="stylesheet" href="./css/rvr-page.css">
+    <style>
+@media (max-width: 978px) {
+	.hero h1 {
+		padding:20px 0 0;
+	}
+}
+    </style>
 
   <header class="main_h">
 
@@ -61,7 +68,6 @@
 <body>
 
   <div class="hero">
-  <br>
   <h1><span>The Event</span><br>Royal Vegas Retreat</h1>
 
 
