Tweak format on special guest page to look nicer on desktop

--- a/event/special-guests.html
+++ b/event/special-guests.html
@@ -65,26 +65,24 @@
 </div>
 
 <div class="row content">
-
-  <h1 class="sec01">
-  <h1>RVR Special Guests</h1>
-  <h2>Royal Princess Alice and Bio-Politics</h2>
+  <h2>Aito (Royal Princess Alice and Bio-Politics)</h2>
+  <div class="row">
+    <div class="col-md-4">
   <img src="../images/guests/aito2.jpg" class="img-fluid"/>
-  <p>We couldn't be happier to welcome Japanese special guest Aito, owner of Royal Princess Alice and Bio-Politics!</p>
-  <p>In their own words:</p>
+</div>
+<div class="col-md-8">
   <p>【RoyalPrincessAlice】</p>
-  <p>ヨーロッパのPrincess のように気品高く</p>
-  <p>Aliceの世界のように不思議でキュートでダーク...</p>
-  <p>そんな世界観をコンセプトにしたゴシック＆ロリータブランドです。</p>
-  <p>更に、和テイストを取り入れたロリータスタイル『和ロリ』も加わりました。</p>
   <p>Noble like European Princess</p>
   <p>Mysterious, cute and dark like the world of Alice ...</p>
   <p>It is a Gothic & Lolita brand with the concept of such a world view.</p>
   <p>In addition, Lolita style "Wa Lori" incorporating Japanese taste has also been added.</p>
   <p>【bio ・politics】</p>
-  <p>性別や年齢に捕われない、自由な表現をテーマにした大人Rock</p>
   <p>Adult Rock with the theme of free expression, regardless of gender or age</p>
-  <p>Find their online shops at <a href="https://royalprincessalice.net">https://royalprincessalice.net</a> and <a href="https://biopolitics.thebase.in">https://biopolitics.thebase.in</a></p>
+</div>
+<div class="col-md-12">
+  <p>Shop the brands online at <a href="https://royalprincessalice.net">https://royalprincessalice.net</a> and <a href="https://biopolitics.thebase.in">https://biopolitics.thebase.in</a></p>
+</div>
+</div>
   <!--<h2>Lief</h2>
   <img src="../images/guests/lief06.jpg" class="img-fluid"/>
   <p>We're so excited to welcome Lief to Royal Vegas Retreat 2021. This Korean brand offers substyle-crossing original print dresses in multiple sizes. In our opinion, they have a little something for everyone! You'll be able to buy from them in our vendors' room as well as see their looks on the runway in the fashion show.</p>
@@ -93,53 +91,87 @@
   <p>You can find their products on their website (<a href="www.lief.co.kr">www.lief.co.kr</a>). You can also follow them on Facebook (<a href="https://www.facebook.com/lief.co.kr/">https://www.facebook.com/lief.co.kr/</a>), Twitter (<a href="https://twitter.com/LIEFOFFICIAL">https://twitter.com/LIEFOFFICIAL</a>), Instagram (<a href="https://instagram.com/lief_official/">https://instagram.com/lief_official/</a>), Tumblr (<a href="http://lief-lolita.tumblr.com/">http://lief-lolita.tumblr.com/</a>), or their Japanese official blog (<a href="http://ameblo.jp/lief-jp/">http://ameblo.jp/lief-jp/</a>).</p>-->
   <hr>
   <h2>Lovely Lor and Holly Flynn</h2>
+  <div class="row">
+    <div class="col-md-6">
   <img src="../images/guests/holly_and_lor.jpg" class="img-fluid"/>
-  <p>Pretty Princess Club is thrilled to announce Lovely Lor and Holly Flynn as special guests at Royal Vegas Retreat!</p>
-  <p>In their own words:</p>
-  <p><i>Lovely Lor is a lolita fashion YouTuber, and creator of Shit Lolitas Say, Lolita Reacts, Lolita Horror Stories and more! She’s an active member of multiple International Lolita Fashion Communities and has been interested in lolita and kawaii fashion for over 10 years. Lovely Lor has been featured in documentaries about lolita fashion such as Sugar Coated and Weird Threads. She creates videos on her youtube channel specializing in alternative fashions, positivity, and adventure!</i></p>
-  <p><i>Holly is Lovely Lor’s partner who’s recently started wearing lolita! She appears regularly on Lovely Lor’s channel and assists with creating videos! Despite being a new lolita, she is fully committed to the fashion and is active with many online and local communities. Holly generally represents gothic lolita in this duo but also enjoys putting her own unique take on lolita.</i></p>
+</div>
+<div class="col-md-6">
+  <p>Lovely Lor is a lolita fashion YouTuber, and creator of Shit Lolitas Say, Lolita Reacts, Lolita Horror Stories and more! She’s an active member of multiple International Lolita Fashion Communities and has been interested in lolita and kawaii fashion for over 10 years. Lovely Lor has been featured in documentaries about lolita fashion such as Sugar Coated and Weird Threads. She creates videos on her youtube channel specializing in alternative fashions, positivity, and adventure!</p>
+</div>
+<div class="col-md-12">
+  <p>Holly is Lovely Lor’s partner who’s recently started wearing lolita! She appears regularly on Lovely Lor’s channel and assists with creating videos! Despite being a new lolita, she is fully committed to the fashion and is active with many online and local communities. Holly generally represents gothic lolita in this duo but also enjoys putting her own unique take on lolita.</p>
   <p>Follow Lor and Holly's adventures on <a href="http://youtube.com/c/lovelylor">Youtube</a>, as well as <a href="http://instagram.com/lovelylor">Lor's Instagram</a>, <a href="https://www.facebook.com/lovelylorofficial/">Facebook</a>, and <a href="http://twitter.com/loveliestlor">Twitter</a>, as well as <a href="https://www.instagram.com/flynnski73/">Holly's Instagram</a> and <a href="https://twitter.com/_Flynnski">Twitter</a>.</p>
+</div>
+</div>
   <hr>
   <h2>Tyler Willis (Scarfing Scarves)</h2>
+  <div class="row">
+    <div class="col-md-4">
   <img src="../images/guests/tyler.jpg" class="img-fluid"/>
-  <p>Pretty Princess Club is incredibly stoked to announce Tyler Willis, a.k.a. Scarfing Scarves as a special guest at Royal Vegas Retreat!</p>
-  <p>In her own words:</p>
-  <p><i>Tyler Willis is the creator behind Last Week Lolita News, a lolita fashion news show made specifically 
+</div>
+<div class="col-md-8">
+  <p>Tyler Willis is the creator behind Last Week Lolita News, a lolita fashion news show made specifically 
 for people who would take out your left eye with a parasol if they thought it would get them even an inch 
 closer to getting their dream dress.
 She discusses the happenings of the week in lolita, dissects the general bickering into satisfying soundbites, 
-and generally works as a giant envoy of catharsis for the lolita community at large.</i></p>
+and generally works as a giant envoy of catharsis for the lolita community at large.</p>
   <p>You can follow Tyler on <a href="https://www.youtube.com/user/ScarfingScarves/videos">YouTube</a>, <a href="https://www.facebook.com/ScarfingScarves/">Facebook</a>, and <a href="https://www.instagram.com/scarfingscarves/">Instagram</a>.</p>
+</div>
+</div>
+<p/>
   <hr>
   <h2>Puvithel</h2>
+  <div class="row">
+    <div class="col-md-6">
   <img src="../images/guests/puvithel.jpg" class="img-fluid"/>
+</div>
+<div class="col-md-6">
   <p>Puvithel is an alternative fashion designer based in Pittsburgh, USA who has been making and designing original handmade jewelry, accessories, clothing and handbags for J-fashion and alternative styles since 2015.</p>
   <p>Puvithel is about unabashed self-expression and spans many styles, including punk, gothic, lolita, and menhera. Regardless of style, Puvithel's items are loud – inspired by the in-your-face aesthetic of American gothic fashion. Puvithel believes that fashion is a beneficial form of expression, a belief that is imbued in every item she makes. Every series has its own style and narrative to aid you in telling your own story. </p>
   <p>You can follow Puvithel on <a href="https://www.instagram.com/puvithel">Instagram</a> and <a href="https://www.facebook.com/Puvithel">Facebook</a>. You can also browse her website at <a href="http://www.puvithel.com">http://www.puvithel.com</a> and <a href="http://puvithel.etsy.com">Etsy</a>.</p>
+</div>
+</div>
   <hr>
   <h2>Kuroshiro Kawaii</h2>
+    <div class="row">
+        <div class="col-md-4">
   <img src="../images/guests/KSKLogo_PROFILE.jpg" class="img-fluid"/>
-  <p>Royal Vegas Retreat is thrilled to announce Texas-based J-fashion resellers, Kuroshiro Kawaii!</p>
-  <p>In their own words:</p>
-  <p><i>Kuroshiro Kawaii is a brand that wants to ensure that the entire community in the Houston, TX area has access to quality Japanese fashion. They pride themselves on having real connections to brand owners and designers, including Japanese, indie, and self-care brands.</i></p>
-  <p><i>Kuroshiro Kawaii is a name with multiple facets. When they were deciding on a name, they wanted one that would reflect the duality of the fashions they offer while at the same time being recognizable and inviting to the typical American in the area.</i></p>
-  <p><i>The “kuro” in their name stands for punk, gothic, and visual fashion; while “shiro” stands for elegant, princely, and sweet lolita and ouji fashions. It also reflects another duality that is important to the attitude of their shop: good and evil, angel and devil, order and chaos. The words “kuro” and “shiro,” and their associated meaning in kanji, really pin down what they wanted for the look and feel of their shop and the brands they want to carry.</i></p>
-  <p><i>“Kawaii” is a word commonly known and familiar to most Americans, and reflects a large portion of the styles they will carry: kawaii and Harajuku styles.</i></p>
-  <p>You can buy from Kuroshiro Kawaii on their webshop: <a href="https://kskawaii.com/">https://kskawaii.com/</a>. You can also follow them on Facebook (<a href="https://www.facebook.com/kuroshirokawaii/">https://www.facebook.com/kuroshirokawaii/</a>), Instagram (<a href="https://www.instagram.com/kskawaiishop/">https://www.instagram.com/kskawaiishop/</a>), and Twitter (<a href="https://twitter.com/KSKawaiiShop">https://twitter.com/KSKawaiiShop</a>).</p>
+</div>
+  <div class="col-md-8">
+  <p>Kuroshiro Kawaii is a brand that wants to ensure that the entire community in the Houston, TX area has access to quality Japanese fashion. They pride themselves on having real connections to brand owners and designers, including Japanese, indie, and self-care brands.</p>
+  <p>Kuroshiro Kawaii is a name with multiple facets. When they were deciding on a name, they wanted one that would reflect the duality of the fashions they offer while at the same time being recognizable and inviting to the typical American in the area.</p>
+</div>
+<div class="col-md-12">
+  <p>The “kuro” in their name stands for punk, gothic, and visual fashion; while “shiro” stands for elegant, princely, and sweet lolita and ouji fashions. It also reflects another duality that is important to the attitude of their shop: good and evil, angel and devil, order and chaos. The words “kuro” and “shiro,” and their associated meaning in kanji, really pin down what they wanted for the look and feel of their shop and the brands they want to carry.</p>
+  <p>“Kawaii” is a word commonly known and familiar to most Americans, and reflects a large portion of the styles they will carry: kawaii and Harajuku styles.</p>
+  <p>You can buy from Kuroshiro Kawaii on their webshop: <a href="https://kskawaii.com/">https://kskawaii.com/</a>. You can also follow them on <a href="https://www.facebook.com/kuroshirokawaii/">Facebook</a>, <a href="https://www.instagram.com/kskawaiishop/">Instagram</a>, and <a href="https://twitter.com/KSKawaiiShop">Twitter</a>.</p>
+</div>
+</div>
   <hr>
   <h2>Fluffy Kawaii Jo</h2>
+    <div class="row">
+        <div class="col-md-4">
   <img src="../images/guests/FluffyKawaiiJo3.jpg" class="img-fluid"/>
-  <p>Royal Vegas Retreat is excited to announce Swiss Youtuber and brand owner Fluffy Kawaii Jo!</p>
-  <p>In her own words:</p>
-  <p><i>“Everybody Can Be Kawaii” – no matter what age, gender, color or body type you are, you deserve to feel kawaii as fluff and good about yourself. Fluffy Kawaii Jo lives in Switzerland and her mission is to help you feel fantastic wearing the stuff that makes you happy. She makes videos about lolita fashion and Kawaii culture in general, from practical lifehacks for people new to the fashion, product reviews, event reports and interviews with people from the scene. She also makes entertaining and funny videos like her "Action Lolita" series, proving that not only can everybody be kawaii, but you can be kawaii anywhere, doing anything as well.</i></p>
-  <p>You can find her on YouTube (<a href="http://www.youtube.com/fluffykawaiijo">http://www.youtube.com/fluffykawaiijo</a>), Firework (<a href="http://fireworktv.onelink.me/iKBL/fluffykawaiiJo">http://fireworktv.onelink.me/iKBL/fluffykawaiiJo</a>, Instagram (<a href="http://www.instagram.com/fluffykawaiijo">http://www.instagram.com/fluffykawaiijo</a>), Facebook (<a href="http://www.facebook.com/fluffykawaiijo">http://www.facebook.com/fluffykawaiijo</a>), and Patreon (<a href="http://www.patreon.com/fluffykawaiijo">http://www.patreon.com/fluffykawaiijo</a>).</p>
+</div>
+  <div class="col-md-8">
+  <p>“Everybody Can Be Kawaii” – no matter what age, gender, color or body type you are, you deserve to feel kawaii as fluff and good about yourself. Fluffy Kawaii Jo lives in Switzerland and her mission is to help you feel fantastic wearing the stuff that makes you happy. She makes videos about lolita fashion and Kawaii culture in general, from practical lifehacks for people new to the fashion, product reviews, event reports and interviews with people from the scene. She also makes entertaining and funny videos like her "Action Lolita" series, proving that not only can everybody be kawaii, but you can be kawaii anywhere, doing anything as well.</p>
+  <p>You can find her on <a href="http://www.youtube.com/fluffykawaiijo">Youtube</a>, <a href="http://fireworktv.onelink.me/iKBL/fluffykawaiiJo">Firework</a>, <a href="http://www.instagram.com/fluffykawaiijo">Instagram</a>, <a href="http://www.facebook.com/fluffykawaiijo">Facebook</a>, and <a href="http://www.patreon.com/fluffykawaiijo">Patreon</a>.</p>
+</div>
+</div>
+<p/>
   <hr>
   <h2>GHOST GiRL GOODS</h2>
+    <div class="row">
+        <div class="col-md-6">
   <img src="../images/guests/ggg.jpg" class="img-fluid"/>
-  <p>Royal Vegas Retreat is hella stoked to announce Canadian kawaii brand GHOST GiRL GOODS!</p>
-  <p>In their own words:</p>
-  <p><i>GHOST GiRL GOODS is a clothing brand, fusing cool hip-hop looks and cute pop style into one. Our goals are to remove labels and embrace differences, encouraging confidence in all hearts! GHOST GiRL uses her love of music, dance, and Japanese street fashion as inspiration for each piece. She has worked with Sebastian Masuda, creator of 6%DOKIDOKI, on the NEW GENERATION KAWAII Tour held in Toronto, August of 2019 and most recently represented Canada at BuriDeco/World Lolita 2020 in Japan, hosted by Triple*Fortune. GHOST GiRL looks forward to meeting you at Royal Vegas Retreat! BE STRANGE. FEAR THE NORM.</i></p>
+</div>
+  <div class="col-md-6">
+  <p>GHOST GiRL GOODS is a clothing brand, fusing cool hip-hop looks and cute pop style into one. Our goals are to remove labels and embrace differences, encouraging confidence in all hearts! GHOST GiRL uses her love of music, dance, and Japanese street fashion as inspiration for each piece. She has worked with Sebastian Masuda, creator of 6%DOKIDOKI, on the NEW GENERATION KAWAII Tour held in Toronto, August of 2019 and most recently represented Canada at BuriDeco/World Lolita 2020 in Japan, hosted by Triple*Fortune. GHOST GiRL looks forward to meeting you at Royal Vegas Retreat! BE STRANGE. FEAR THE NORM.</p>
+</div>
+<div class="col-md-12">
   <p>You can find GHOST GiRL GOODS at <a href="https://www.ghostgirlgoods.com/">https://www.ghostgirlgoods.com/</a> as well as on <a href="https://www.facebook.com/ghostgirlgoods">Facebook</a>, <a href="https://www.instagram.com/ghostgirlgoods/">Instagram</a>, <a href="https://www.youtube.com/c/theofficialghostgirlchannel">YouTube</a>, and <a href="https://twitter.com/ghostgirlgoods">Twitter</a>.</p>
+</div>
+</div>
   <hr>
   <p>We are working with the brightest talent, and we're truly excited about all of our special guests. Watch our <a href="https://www.facebook.com/ppcllcrvr">Facebook page</a> and sign up for our <a href="https://prettyprincessclub.substack.com/">Substack newsletter</a> for the latest announcements.</p>
   <hr>
