--- a/event/tourists.html
+++ b/event/tourists.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html><html><head><title>PPC Presents: Royal Vegas Retreat</title><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"><meta http-equiv="x-ua-compatible" content="ie=edge">
+  <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
   <!-- add links to custom fonts -->
     <link href="https://fonts.googleapis.com/css?family=Gabriela" rel="stylesheet">
